src/components/Sidebar/Sidebar.module.css
.sidebar {
  width: 225px;
  height: 100vh;
  background-color: var(--background-default);
  color: var(--primary-light);
  padding: 14px 14px 24px 14px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  transition: transform 0.5s ease;
  flex-shrink: 0;
  position: fixed;
  left: 0;
  top: 0;
  transform: translateX(-101%);
  z-index: 9;
}
.sidebarIsOpen {
  transform: translateX(0);
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: var(--modal-overlay);
  z-index: 0;
  transform: translateX(-101%);
  transition: transform 0.3s ease;
}

.overlayIsVisible {
  transform: translateX(0);
}

.sidebarTitle {
  font-weight: 400;
  font-size: 12px;
  letter-spacing: -0.02em;
  color: var(--sidebar-light);
  margin-bottom: 8px;
}

.createBoard {
  display: flex;
  align-items: center;
  gap: 70px;
  padding: 14px 0px;
  border-top: 1px solid rgba(22, 22, 22, 0.1);
  border-bottom: 1px solid rgba(22, 22, 22, 0.1);
}

.createBoardTitle {
  color: var(--accent-sidebar-color);
  font-weight: 500;
  font-size: 14px;
  letter-spacing: -0.02em;
}
.addBtn {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 6px;
  padding: 8px 10px;
  background-color: var(--accent-sidebar-btn);
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.addBtn:hover {
  background-color: var(--hover-sidebar-btn);
}
.addBtnIcon {
  width: 20px;
  height: 20px;
  fill: transparent;
  stroke: var(--plus-sidebar-icon);
}

.titleInput {
  width: 90%;
  min-width: 256px;
  max-width: 287px;
  height: 49px;
  padding: 18px;
  font-size: 14px;

  background-color: rgb(246, 246, 247);
  border-radius: 8px;
  margin-bottom: 24px;
  opacity: 0.4;
  transition: all var(--primary-transition);
}

.textBackground {
  color: var(--text-primary-color);

  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: -0.28px;
  margin-bottom: 14px;
}

@media (min-width: 768px) {
  .sidebar {
    width: 260px;
    padding: 24px;
  }
}

@media (min-width: 1440px) {
  .sidebar {
    position: initial;
    left: initial;
    top: initial;
    transform: translateX(0);
    z-index: initial;
  }

  .overlay {
    display: none;
  }

  .createBoard {
    gap: 85px;
  }
}

.logoIcon {
  stroke: var(--plus-sidebar-icon);
}

